prevent horizontal scrolling to fix but of too wide columns class

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -11,6 +11,7 @@ body {
   color: $bodyColor;
   font-family: "Roboto";
   position: relative;
+  overflow-x: hidden;
 }
 
 .banner {
